--- a/pages/maquinas.html
+++ b/pages/maquinas.html
@@ -11,7 +11,7 @@
   <section class="seccion-maquinas">
     <header>
       <div class="logo-container">
-        <img onclick="window.location.href='/pages/index.html'" src="/img/logo.jpg" alt="Logo de la Empresa" class="logo">
+        <img onclick="window.location.href='/index.html'" src="/img/logo.jpg" alt="Logo de la Empresa" class="logo">
       </div>
       <h1>Nuestras Máquinas</h1>
     </header>
